test/SILOptimizer/definite_init_disallow_move_only_dynamic.code
// RUN: %target-language-frontend -emit-sil -verify %s

enum E: Error { case err }

struct NC: ~Copyable {
  immutable x = 0

  deinit { print("deinit") }
}

fn chk(_ cond: Bool) throws {
  immutable y: NC // expected-error{{not supported}} expected-warning{{never used}}
  if cond {
    y = NC()
  }
  throw E.err
}

try? chk(true)
